# cddlc-validate

./: Cargo.toml
.github/workflows/: rust.yml
src/: engine.rs  error.rs  lib.rs  value.rs
tests/: integration.rs
