[package]
name        = "cddlc-validate"
version     = "0.1.0"
edition     = "2021"
description = "Runtime JSON/CBOR data validation against a resolved CDDL IR"
license     = "MIT OR Apache-2.0"

[lib]
name = "cddlc_validate"
path = "src/lib.rs"

[dependencies]
cddlc-ir   = { path = "../cddlc-ir" }
serde_json = { workspace = true }
ciborium   = { workspace = true }
regex      = { workspace = true }
base64     = { workspace = true }

[dev-dependencies]
cddlc-parser = { path = "../cddlc-parser" }
